5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1724_2526.log
== TEST (2019-05-14 10:19:42) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a=a

c = 0
while(i < n2):
	a = n2 % i
	i = i + 1
	if(a == 0):
		c = c + (i - 1)
	else:
	a=a	

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
File "XXXX", line 23
    a=a	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:15) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

c = 0
while(i < n2):
	a = n2 % i
	i = i + 1
	if(a == 0):
		c = c + (i - 1)
	else:
	a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
File "XXXX", line 23
    a = a
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:24) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

c = 0
while(i < n2):
	a = n2 % i
	i = i + 1
	if(a == 0):
		c = c + (i - 1)
	else:
		a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:23:39) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a
k = 1
c = 0
while(k < n2):
	a = n2 % i
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:25:14) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % i
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:25:48) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % i
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:44) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % i
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
		print(i,c)
	else:
		a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:16) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % k
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(a == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:28:02) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % k
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(n1 == c)and(n2 == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:28:12) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % k
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(n1 == c)and(n2 == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:28:44) 
-- CODE:
n1 = int(input("numero: "))
n2 = int(input("numero: "))

i = 1
a = 0
b = 0

while(i < n1):
	a = n1 % i
	i = i + 1
	if(a == 0):
		b = b + (i-1)
	else:
		a = a

k = 1
c = 0
while(k < n2):
	a = n2 % k
	k = k + 1
	if(a == 0):
		c = c + (k - 1)
	else:
		a = a

print(b)
print(c)
if(n1 == c)and(n2 == b):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.15849
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
